@@ -758,6 +758,7 @@ void check_login(object *op) {
     esrv_new_player(op->contr,op->weight+op->carrying);
     esrv_send_inventory(op, op);
     esrv_add_spells(op->contr, NULL);
+    esrv_send_pickup(pl);
 
     CLEAR_FLAG(op, FLAG_FRIENDLY);
 
